Actions
Bug #14507
closednvmeadm shouldn't allow writing firmware to a read-only slot 1
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
On some NVMe devices, firmware slot 1 is read-only. Both nvmeadm(1M) and nvme(7D) need to check that.
Related issues
Updated by Hans Rosenfeld 6 months ago
Testing: I've tested this extensively on Tintri systems, but not on stock illumos-gate as I don't have any firmware updates for my old NVMe drives.
Updated by Hans Rosenfeld 6 months ago
- Related to Bug #14508: improve nvmeadm firmware reporting added
Updated by Hans Rosenfeld 6 months ago
- Related to Bug #14509: nvmeadm commit-firmware error reporting isn't working as intended added
Updated by Electric Monk 6 months ago
- Status changed from In Progress to Closed
- % Done changed from 0 to 100
git commit 8466ab889653be2119e4a8966b6bc4e2d5ee2fb6
commit 8466ab889653be2119e4a8966b6bc4e2d5ee2fb6 Author: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Date: 2022-02-22T09:13:21.000Z 14507 nvmeadm shouldn't allow writing firmware to a read-only slot 1 14508 improve nvmeadm firmware reporting 14509 nvmeadm commit-firmware error reporting isn't working as intended Reviewed by: Guy Morrogh <gmorrogh@tintri.com> Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Andy Giles <agiles@tintri.com> Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions