14507 nvmeadm shouldn't allow writing firmware to a read-only slot 1 14508 improve nvmeadm firmware reporting 14509 nvmeadm commit-firmware error reporting isn't working as intended Reviewed by: Guy Morrogh <gmorrogh@tintri.com> Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Andy Giles <agiles@tintri.com> Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>