usr/src/cmd/nvmeadm/nvmeadm.c
@@ -10,10 +10,9 @@
  */
 
 /*
- * Copyright 2016 Nexenta Systems, Inc.
  * Copyright 2017 Joyent, Inc.
- * Copyright 2019 Western Digital Corporation.
  * Copyright 2021 Oxide Computer Company
+ * Copyright 2022 Tintri by DDN, Inc. All rights reserved.
  */
 
 /*
@@ -788,7 +787,7 @@ do_get_logpage_fwslot(int fd, const nvme_process_arg_t *npa)
 		return (-1);
 
 	(void) printf("%s: ", npa->npa_name);
-	nvme_print_fwslot_log(fwlog);
+	nvme_print_fwslot_log(fwlog, npa->npa_idctl);
 
 	free(fwlog);
 
@@ -1314,6 +1313,7 @@ do_firmware_load(int fd, const nvme_process_arg_t *npa)
 	ssize_t len;
 	offset_t offset = 0;
 	size_t size;
+	uint16_t sc;
 	char buf[FIRMWARE_READ_BLKSIZE];
 
 	if (npa->npa_argc > 2)
@@ -1322,6 +1322,10 @@ do_firmware_load(int fd, const nvme_process_arg_t *npa)
 	if (npa->npa_argc == 0)
 		errx(-1, "Requires firmware file name, and an "
 		    "optional offset");
+
+	if (npa->npa_isns)
+		errx(-1, "Firmware loading not available on a per-namespace "
+		    "basis");
 
 	if (npa->npa_argc == 2)
 		offset = get_fw_offsetb(npa->npa_argv[1]);
@@ -1342,9 +1346,9 @@ do_firmware_load(int fd, const nvme_process_arg_t *npa)
 		if (len == 0)
 			break;
 
-		if (!nvme_firmware_load(fd, buf, len, offset))
+		if (!nvme_firmware_load(fd, buf, len, offset, &sc))
 			errx(-1, "Error loading \"%s\": %s", npa->npa_argv[0],
-			    strerror(errno));
+			    nvme_fw_error(errno, sc));
 
 		offset += len;
 		size += len;
@@ -1390,7 +1394,7 @@ static int
 do_firmware_commit(int fd, const nvme_process_arg_t *npa)
 {
 	uint_t slot;
-	uint16_t sct, sc;
+	uint16_t sc;
 
 	if (npa->npa_argc > 1)
 		errx(-1, "Too many arguments");
@@ -1398,11 +1402,18 @@ do_firmware_commit(int fd, const nvme_process_arg_t *npa)
 	if (npa->npa_argc == 0)
 		errx(-1, "Firmware slot number is required");
 
+	if (npa->npa_isns)
+		errx(-1, "Firmware committing not available on a per-namespace "
+		    "basis");
+
 	slot = get_slot_number(npa->npa_argv[0]);
 
-	if (!nvme_firmware_commit(fd, slot, NVME_FWC_SAVE, &sct, &sc))
+	if (slot == 1 && npa->npa_idctl->id_frmw.fw_readonly)
+		errx(-1, "Cannot commit firmware to slot 1: slot is read-only");
+
+	if (!nvme_firmware_commit(fd, slot, NVME_FWC_SAVE, &sc))
 		errx(-1, "Failed to commit firmware to slot %u: %s",
-		    slot, nvme_str_error(sct, sc));
+		    slot, nvme_fw_error(errno, sc));
 
 	if (verbose)
 		(void) printf("Firmware committed to slot %u.\n", slot);
@@ -1423,7 +1434,7 @@ static int
 do_firmware_activate(int fd, const nvme_process_arg_t *npa)
 {
 	uint_t slot;
-	uint16_t sct, sc;
+	uint16_t sc;
 
 	if (npa->npa_argc > 1)
 		errx(-1, "Too many arguments");
@@ -1431,15 +1442,19 @@ do_firmware_activate(int fd, const nvme_process_arg_t *npa)
 	if (npa->npa_argc == 0)
 		errx(-1, "Firmware slot number is required");
 
+	if (npa->npa_isns)
+		errx(-1, "Firmware activation not available on a per-namespace "
+		    "basis");
+
 	slot = get_slot_number(npa->npa_argv[0]);
 
-	if (!nvme_firmware_commit(fd, slot, NVME_FWC_ACTIVATE, &sct, &sc))
+	if (!nvme_firmware_commit(fd, slot, NVME_FWC_ACTIVATE, &sc))
 		errx(-1, "Failed to activate slot %u: %s", slot,
-		    nvme_str_error(sct, sc));
+		    nvme_fw_error(errno, sc));
 
 	if (verbose)
 		printf("Slot %u activated: %s.\n", slot,
-		    nvme_str_error(sct, sc));
+		    nvme_fw_error(errno, sc));
 
 	return (0);
 }
